# GVirt

./: .gitattributes  .gitignore  README.en.md  README.md
.claude/skills/: debug-accuracy.md
.githooks/: pre-commit
xlite/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  MANIFEST.in  README.en.md  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.py  xlite.spec
xlite/csrc/: _C.cpp  acl.h  ascend.h  auto_tuner.cpp  auto_tuner.h  base.cpp  base.h  ccl.cpp  ccl.h  core_assigner.cpp  core_assigner.h  debug.cpp  debug.h  model.cpp  model.h  op.cpp  op.h  runtime.cpp  runtime.h  sock.cpp  sock.h  swizzle.cpp  swizzle.h  xlite.cpp  xlite.h  xlite_base.cpp  xlite_base.h  xlite_model.cpp  xlite_model.h  xlite_op.cpp  xlite_op.h  xlite_runtime.cpp  xlite_runtime.h
xlite/csrc/kernels/: .clang-tidy  add.cpp  add.h  add_and_rmsnorm.cpp  add_bfloat16_t.cpp  add_bias.cpp  add_bias.h  add_bias_bfloat16_t.cpp  add_bias_float.cpp  add_bias_float16_t.cpp  add_cce.cpp  add_custom.cpp  add_float16_t.cpp  all_gather.cpp  all_reduce.cpp  allreduce.cpp  attention.h  attention_bfloat16_t.cpp  attention_float16_t.cpp  beta_decay.h  beta_decay_bfloat16_t.cpp  beta_decay_float.cpp  beta_decay_float16_t.cpp  cast.cpp  cast.h  cast_bfloat16_t_float.cpp  cast_float_bfloat16_t.cpp  cce_stub.h  ccl_param.h  concat.cpp  config_macro.h  conv1d_and_silu.h  conv1d_and_silu_bfloat16_t.cpp  conv1d_and_silu_float.cpp  conv1d_and_silu_float16_t.cpp  debug.h  decode_att_mix.cpp  decode_att_mix.h  decode_att_mix_bf16.cpp  decode_att_mix_bfloat16_t.cpp  (+124 more)
xlite/doc/: ENVIRONMENT_VARIABLES.md  contributing.md  deepseek.md  e2e_test.md  models.md  static_checker.md
xlite/docker/: openeuler_torch_ascend_a3_arm.Dockerfile  openeuler_torch_ascend_a3_x86.Dockerfile  openeuler_torch_ascend_arm.Dockerfile  openeuler_torch_ascend_x86.Dockerfile
xlite/tests/: cpp_check.py  deepseek_config_671B.json  deepseek_config_671B_experts_int8.json  deepseek_generate.py  deepseek_kernel.py  deepseek_v3.py  generate.py  pr_ci_bot.py  python_check.py  run.sh  run_accuracy.sh  run_perf.sh  run_static_checks.py  test_prefill.json
xlite/tests/e2e/: batch_aisbench.py  daily_aisbench_bot.py  daily_benchmark_bot.py  daily_bot_utils.py  install_cron.sh  offline_accurracy_test.py  online_api_server.sh  online_server_aclgraph.sh  online_server_compare.sh  online_server_test.sh  online_server_xlite_decode_only.sh  online_server_xlite_full.sh  online_sever_compare.sh  process_data.py  run_benchmark_scheduler.py
xlite/tests/funcs/: print.py
xlite/tests/kernels/: add.py  add_and_rmsnorm.py  add_bias.py  all_gather.py  all_reduce.py  alltoallv.py  attention.py  attention_prefill.py  beta_decay.py  cast.py  concat.py  conv1d_and_silu.py  decode_attention.py  decode_mix.py  dequant.py  einsum_mht_mhd.py  embed.py  experts_counts_sum.py  group_matmul.py  group_matmul_dequant.py  indexer_scores.py  indexer_topk.py  l2norm.py  layernorm.py  linear_att_proj.py  matmul.py  matmul_dequant.py  matmul_quant.py  matmul_swizzle_perf.py  matmul_with_bias.py  mla.py  mla_prepare.py  msd_dequant.py  muls.py  permutation.py  prefill_attention.py  quant.py  quant_dyn.py  recurrent_gated_delta_rule.py  reduce_scatter.py  (+15 more)
xlite/tests/models/: deepseek_v3.py  glm4_moe.py  llama.py  minimax_m2.py  qwen2.py  qwen3.py  qwen3_5.py  qwen3_5_moe.py  qwen3_moe.py  weight_utils.py
xlite/tests/performance/swizzle/: matmul_swizzle_perf.py  process_swizzle_data.py
xlite/tools/: convert.py  w8a8.sh
xlite/tools/quantization/: build_index.py  preprocess.py  utils.py  w8a8.py
xlite/tools/quantization/algorithms/: rotation.py
xlite/tools/quantization/algorithms/hadamard_matrices/: had.12.txt  had.20.pal.txt  had.28.pal2.txt  had.36.pal2.txt  had.60.pal.txt
xlite/xlite/: _C.pyi  __init__.py
xlite/xlite/tools/: convert.py  fp8_cast_bf16.py  w8a8.sh
xlite/xlite/tools/quantization/: preprocess.py  w8a8.py
xlite/xlite/tools/quantization/algorithms/: quantizers.py  rotation.py
xlite/xlite/tools/quantization/algorithms/hadamard_matrices/: had.108.pal.txt  had.140.pal.txt  had.40.tpal.txt
