[build-system]
# synchronize with requirements-build.txt when updating build dependencies
requires = [
    "setuptools>=80.0.0",
    "cmake>=3.22.0",
    "pybind11>=3.0.0",
    "torch>=2.5.1,<=2.9.0", # use torch+cpu; make sure (torch: build version <= runtime version)
]
build-backend = "setuptools.build_meta"

[project]
name = "xlite"
dynamic = ["version"]
description = "A lightweight, effective and easy-to-extend inference runtime"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Huawei Euler OS Team" }]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# synchronize with requirements.txt when updating dependencies
dependencies = [
    "torch>=2.5.1,<=2.9.0", # ake sure (torch: build version <= runtime version)
]

[project.optional-dependencies]
# synchronize with requirements-dev.txt when updating dev dependencies
dev = [
    "setuptools>=80.0.0",
    "cmake>=3.22.0",
    "numpy<2.0.0",
    "tqdm",
    "safetensors",
    "tiktoken",
    "sentencepiece",
    "protobuf",
    "transformers",
    "pyyaml>=6.0",
    "torch-npu>=2.5.1",     # make sure (torch: build version <= runtime version)
    "clang-format==22.1.0",
    "clang-tidy==22.1.0",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://atomgit.com/openeuler/GVirt"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "xlite.__version__" }

[tool.setuptools.packages.find]
exclude = ["*.tools", "*.tools.*", "tests", "tests.*"]

[tool.setuptools.package-data]
xlite = ["py.typed", "*.pyi", "*.so", "lib/*.so"]

[tool.mypy]
mypy_path = "xlite"
